add the little pony Fluttershy

--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
                         <figcaption>Little Pony Rainbow Dash</figcaption>
                     </figure>
                 </li>
+                <li>
+                    <figure>
+                        <img src="img/Fluttershy.png">
+                        <figcaption>Little pony Fluttershy</figcaption>
+                    </figure>
+                </li>
                     
                 
             </ul>
