add the little pony Pinkiepie

--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
                         <figcaption>Little pony Fluttershy</figcaption>
                     </figure>
                 </li>
+                <li>
+                    <figure>
+                        <img src="img/pinkiepie.png">
+                        <figcaption>Little pony Pinkiepie</figcaption>
+                    </figure>
+                </li>
                     
                 
             </ul>
